# jhu-deeplearning

./: README.md  circle_distance.ipynb  hello.py  pyproject.toml
homework/week_2/: assignment_2.ipynb
homework/week_3/: assignment_3.ipynb
homework/week_4/: assignment_4.ipynb
homework/week_5/: assignment_5.ipynb
homework/week_6/: assignment_6-2.ipynb  assignment_6.ipynb
