[project]
name = "jhu-deeplearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.11.3",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
